packages/typ/tests/fixtures/diagnostics/0761_polyvar_call_payload_mismatch_01.ml.infer.expected
File "0761_polyvar_call_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0761_polyvar_call_payload_mismatch_01 is not a valid module name.

File "0761_polyvar_call_payload_mismatch_01.ml", line 4, characters 23-27:
4 | let _ = read_alpha (`A true)
                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
